@@ -1,3 +1,7 @@
+2004-12-14  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am (EXTRA_DIST): Add .cvsignore.
+
 2004-11-30  Conrad T. Pino  <Conrad@Pino.com>
 
 	* libdiff.mak: Regenerated for "../cvsnt.dsp" change.
